k8s demo/k8s-demo-manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: demo
spec:
  # volumes:
  #   - name: task-pv-storage
  #     persistentVolumeClaim:
  #       claimName: pv-claim
  containers:
  - image: nginxdemoprominent.azurecr.io/nginx
    imagePullPolicy: Always
    name: nginx
    readinessProbe:
      httpGet:
        path: /
        port: 80
      periodSeconds: 3
    livenessProbe:
      httpGet:
        path: /
        port: 80
      periodSeconds: 3
      failureThreshold: 6
    resources:
      requests:
        cpu: 200m
        memory: 256Mi
      limits:
        cpu: 500m 
        memory: 512Mi
    # volumeMounts:
    # - mountPath: "/data"
    #   name: task-pv-storage
  restartPolicy: Always
  securityContext: {}
