k8s demo/k8s-demo-manifests/service_headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-headless
  namespace: demo
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: None
