k8s demo/k8s-demo-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: nginx
            port:
              number: 80
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
